--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^6.0.0",
     "@ionic/storage-angular": "^3.0.6",
+    "@ngrx/component-store": "^13.0.2",
     "@ngrx/effects": "^13.0.2",
     "@ngrx/store": "^13.0.2",
     "@ngrx/store-devtools": "^13.0.2",
