--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@angular/router": "~13.0.0",
     "@awesome-cordova-plugins/barcode-scanner": "^5.39.0",
     "@capacitor/app": "1.0.7",
-    "@capacitor/core": "3.3.3",
+    "@capacitor/core": "^3.3.3",
     "@capacitor/haptics": "1.1.3",
+    "@capacitor/ios": "3.4.1",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^6.0.0",
