--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@awesome-cordova-plugins/barcode-scanner": "^5.39.0",
+    "@awesome-cordova-plugins/screen-orientation": "^5.39.1",
     "@capacitor/app": "1.0.7",
     "@capacitor/core": "^3.3.3",
     "@capacitor/haptics": "1.1.3",
@@ -34,6 +35,7 @@
     "@ngrx/store-devtools": "^13.0.2",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "cordova-plugin-screen-orientation": "^3.0.2",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
