--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4204",
+    "start": "ng serve --port 4204  --disable-host-check --host 0.0.0.0",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
